<resources>
    <string name="app_name">Splintter</string>

    <string name="wip">Work in progress...</string>

    <string name="hello_world">Hello World</string>

    <string name="create_group">Crear un nuevo gasto</string>

    <!-- ======================================================================================= -->
    <!-- ======================================================================================= -->
    <!-- Onboarding strings -->
    <!-- ======================================================================================= -->
    <!-- ======================================================================================= -->

    <string name="onboarding_title">Bienvenido a Splintter</string>
    <string name="onboarding_subtitle">¡Controla cuanto gastas con tus amigos y dividi las cuentas fácil!</string>
    <string name="onboarding_share_app">Contar de la aplicación a un amigo</string>

    <!-- ======================================================================================= -->
    <!-- ======================================================================================= -->
    <!-- Group view strings -->
    <!-- ======================================================================================= -->
    <!-- ======================================================================================= -->

    <string name="create_group_dialog_title">¿Cómo quieres llamar al grupo?</string>
    <string name="create_group_dialog_positive_button">Crear</string>
    <string name="create_group_dialog_negative_button">Cerrar</string>
    <string name="view_group_expenses_pager_title">Gastos</string>
    <string name="view_group_expenses_summary_pager_title">Resumen</string>
    <string name="create_group_dialog_hint">Cena del sábado</string>
    <string name="new_expense_dialog_positive_button">Agregar</string>
    <string name="add_expense_amount_hint">100</string>
    <string name="add_expense_person_hint">Nahu</string>
    <string name="add_expense_dialog_title">Cargar nuevo gasto</string>
    <string name="add_expense_description_hint">Bebida</string>
</resources>
